logs/Slang/generic/member/class_member_test_36.sv.log
name: class_member_test_36
description: Test
should_fail: 0
tags: 8.3
files: /home/travis/build/SymbiFlow/sv-tests/tests/generic/member/class_member_test_36.sv
incdirs: 
top_module: 
rc: 1

../../home/travis/build/SymbiFlow/sv-tests/tests/generic/member/class_member_test_36.sv:7:1: error: language feature not yet supported
class myclass;
^~~~~~~~~~~~~~
